[package]
name = "mixxx-dj-converter"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Arne Beer <contact@arne.beer>"]
homepage = "https://github.com/nukesor/pueue"
repository = "https://github.com/nukesor/pueue"

[dependencies]
anyhow = "1"
better-panic = "0.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "cargo"] }
crossbeam-channel = "0.5"
dotenv = "0.15"
log = "0.4"
pretty_env_logger = "0.4"
serde = "1"
serde_json = "1"
serde_derive = "1"
sqlx = { version = "0.6", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "macros",
  "chrono",
] }
strum = "0.24"
strum_macros = "0.24"
tokio = { version = "1.28", features = ["rt-multi-thread", "time", "macros"] }

[dev-dependencies]
pretty_assertions = "1"
rstest = "0.16"
